--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -7,6 +7,7 @@
 batch_connect:
   template: vnc
 script:
+  accounting_id: "<%= account %>"
   native:
   <%- slurm_args.each do |arg| %>
     - "<%= arg %>"
