--- a/template/script.sh.erb
+++ b/template/script.sh.erb
@@ -28,7 +28,7 @@ cd "${HOME}"
 #
 
 # Load the required environment
-module load xalt/latest iqmol/2.14
+module load iqmol/2.14
 
 # Output debug info
 module list
