updates to the form
* use auto_accounts
* remove unused node_type
* remove support for setting 0 cores

--- a/submit.yml.erb
+++ b/submit.yml.erb
@@ -1,13 +1,10 @@
 <%-
-  ppn = num_cores.blank? ? 28 : num_cores.to_i
-
-  slurm_args = [ "--nodes", "1", "--ntasks-per-node", "#{ppn}" ]
+  slurm_args = [ "--nodes", "1", "--ntasks-per-node", "#{num_cores.to_i}" ]
 %>
 ---
 batch_connect:
   template: vnc
 script:
-  accounting_id: "<%= account %>"
   native:
   <%- slurm_args.each do |arg| %>
     - "<%= arg %>"
